--- a/db/package.json
+++ b/db/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.9.14"
+    "mongoose": "^5.9.14",
+    "morgan": "^1.10.0"
   }
 }
