Ajout d'un fichier api.env pour le conteneur api
Variables d'environnement injectées par docker-compose.

Closes: #7 - Add environment variable for dev/prod

--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -4,10 +4,10 @@ services:
     container_name: projet
     restart: always
     build: .
+    env_file:
+      - api.env
     ports:
       - "8000:8000"
-    links:
-      - mongo
   mongo:
     container_name: mongo
     image: mongo
