--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
-  app:
-    container_name: projet
+  api:
+    container_name: api
     restart: always
     build: .
     env_file:
@@ -11,3 +11,43 @@ services:
   mongo:
     container_name: mongo
     image: mongo
+  webserver:
+    image: nginx:mainline-alpine
+    container_name: webserver
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - web-root:/var/www/html
+      - ./nginx-conf:/etc/nginx/conf.d
+      - certbot-etc:/etc/letsencrypt
+      - certbot-var:/var/lib/letsencrypt
+      - dhparam:/etc/ssl/certs
+    depends_on:
+      - api
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - certbot-etc:/etc/letsencrypt
+      - certbot-var:/var/lib/letsencrypt
+      - web-root:/var/www/html
+    depends_on:
+      - webserver
+    command: certonly --webroot --webroot-path=/var/www/html --email contact@combiendecarbone.fr --agree-tos --no-eff-email --staging -d api.carton.combiendecarbone.fr
+volumes:
+  certbot-etc:
+  certbot-var:
+  web-root:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/thomas/carton/db/views
+      o: bind
+  dhparam:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/thomas/carton/db/dhparam
+      o: bind
