Fix prod docker-compose file
Closes: #19 - Réorganiser le back

--- a/back/docker-compose.yml
+++ b/back/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   api:
     container_name: api
     restart: always
-    build: .
+    build: ./api
     env_file:
       - ./api/api.env
   mongo:
