--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/js": "^5.3.45",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
