--- a/back/api/dockerfile
+++ b/back/api/dockerfile
@@ -1,4 +1,10 @@
-FROM node:12
+FROM node:12 AS base
+
+# Dockerize is needed to sync containers startup
+ENV DOCKERIZE_VERSION v0.6.0
+RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+  && tar -C /usr/local/bin -xzvf dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+  && rm dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 
 RUN mkdir -p /usr/src/app
 
@@ -6,10 +12,12 @@ WORKDIR /usr/src/app
 
 COPY package*.json ./
 
+FROM base AS dependencies
+
 RUN npm install
+
+FROM dependencies AS runtime
 
 COPY . .
 
 EXPOSE 8000
-
-CMD ["npm", "start"]
