--- a/back/api/package.json
+++ b/back/api/package.json
@@ -4,7 +4,8 @@
   "description": "Base de données du projet Carton",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "mocha"
   },
   "author": "thomas-god",
   "repository": {
@@ -17,5 +18,9 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.14",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.0.1"
   }
 }
