--- a/back/docker-compose.yml
+++ b/back/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     container_name: api
     restart: always
     build: ./api
+    command: npm start
     env_file:
       - ./api/api.env
   mongo:
