Implement simple tests for the API
Start implementing Implémenter tests unitaires sur les routes de l'API #31

--- a/back/api/docker-compose.yml
+++ b/back/api/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     command: dockerize
       -wait tcp://mongo:27017 -wait tcp://api:8000 -timeout 10s
       bash -c "npm test"
+    environment:
+      - API_URL=http://api:8000
     depends_on:
       - api
       - mongo
