--- a/back/api/package.json
+++ b/back/api/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "chai-things": "^0.2.0",
     "mocha": "^8.0.1"
   }
 }
