--- a/back/api/package.json
+++ b/back/api/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "lorem-ipsum": "^2.0.3",
     "mongoose": "^5.9.14",
     "morgan": "^1.10.0"
   },
