Updte API docker-compose files to split the tests
Tests can now be launched with `npm run testd`, and the api/db can be
launch without the tests suite running.

--- a/back/api/docker-compose.yml
+++ b/back/api/docker-compose.yml
@@ -9,15 +9,11 @@ services:
       - api.env
     ports:
       - 8000:8000
-  api-tests:
-    image: api
-    command: dockerize
-      -wait tcp://mongo:27017 -wait tcp://api:8000 -timeout 10s
-      bash -c "npm test"
-    environment:
-      - API_URL=http://api:8000
-    depends_on:
-      - api
-      - mongo
   mongo:
     image: mongo
+    restart: always
+    volumes:
+      - db:/data/db
+
+volumes:
+  db:
