--- a/back/docker-compose.yml
+++ b/back/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "443:443"
     volumes:
       - web-root:/var/www/html
-      - ./nginx-conf:/etc/nginx/conf.d
+      - ../nginx-conf:/etc/nginx/conf.d
       - certbot-etc:/etc/letsencrypt
       - certbot-var:/var/lib/letsencrypt
       - dhparam:/etc/ssl/certs
