--- a/back/api/docker-compose.yml
+++ b/back/api/docker-compose.yml
@@ -12,6 +12,12 @@ services:
     restart: always
     volumes:
       - db:/data/db
+  mongo_users:
+    image: mongo
+    restart: always
+    volumes:
+      - db_users:/data/db
 
 volumes:
   db:
+  db_users:
