--- a/back/api/package.json
+++ b/back/api/package.json
@@ -15,11 +15,13 @@
   },
   "license": "MIT",
   "dependencies": {
+    "argon2": "^0.26.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "lorem-ipsum": "^2.0.3",
     "mongoose": "^5.9.14",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^8.2.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
