Add session management using express-session and redis

--- a/back/api/package.json
+++ b/back/api/package.json
@@ -16,11 +16,14 @@
   "license": "MIT",
   "dependencies": {
     "argon2": "^0.26.2",
+    "connect-redis": "^4.0.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "lorem-ipsum": "^2.0.3",
     "mongoose": "^5.9.14",
     "morgan": "^1.10.0",
+    "redis": "^3.0.2",
     "uuid": "^8.2.0"
   },
   "devDependencies": {
