--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdi/js": "^5.3.45",
     "core-js": "^3.6.5",
+    "fuse.js": "^6.3.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
