--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Run the API tests suite in a Docker environment
-      run: docker-compose -f ./back/api/docker-compose.yml -f ./back/api/test/docker-compose.yml up --build --abort-on-container-exit
+      run: docker-compose -f ./back/api/docker-compose.yml -f ./back/api/docker-compose.ci.yml -f ./back/api/test/docker-compose.yml up --build --abort-on-container-exit
       env:
         PORT: 8000
         MONGO_URL: mongodb://mongo:27017/cartons
