--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,13 +16,13 @@ jobs:
     - uses: actions/checkout@v2
     - name: create env file
       run: |
-        touch ./back/api/.env
-        echo PORT=8000 >> ./back/api/.env
-        echo MONGO_URL=mongodb://mongo:27017/cartons >> ./back/api/.env
-        echo MONGO_URL_USERS=mongodb://mongo_users:27017/users >> ./back/api/.env
-        echo REDIS_URL=redis://redis_store >> ./back/api/.env
-        echo SESSION_SECRET=mon_secret_pas_secret >> ./back/api/.env
-        echo ALPHA=false >> ./back/api/.env
-        cat ./back/api/.env
+        touch ./back/api/api.env
+        echo PORT=8000 >> ./back/api/api.env
+        echo MONGO_URL=mongodb://mongo:27017/cartons >> ./back/api/api.env
+        echo MONGO_URL_USERS=mongodb://mongo_users:27017/users >> ./back/api/api.env
+        echo REDIS_URL=redis://redis_store >> ./back/api/api.env
+        echo SESSION_SECRET=mon_secret_pas_secret >> ./back/api/api.env
+        echo ALPHA=false >> ./back/api/api.env
+        cat ./back/api/api.env
     - name: Run the API tests suite in a Docker environment
       run: docker-compose -f ./back/api/docker-compose.yml -f ./back/api/test/docker-compose.yml up --build --abort-on-container-exit
