--- a/back/api/test/docker-compose.yml
+++ b/back/api/test/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       bash -c "npm test"
     environment:
       - API_URL=http://api:8000
+    env_file:
+      - api.env
     depends_on:
       - api
       - mongo
