--- a/back/api/package.json
+++ b/back/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node dist/index.js",
-    "test": "mocha",
+    "test": "ts-mocha -p ./tsconfig.json **/*.spec.ts",
     "testd": "sudo docker-compose -f docker-compose.yml -f ./test/docker-compose.yml up --build --abort-on-container-exit"
   },
   "author": "thomas-god",
@@ -31,9 +31,16 @@
     "uuid": "^8.2.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.12",
+    "@types/chai-http": "^4.2.0",
+    "@types/chai-things": "0.0.34",
+    "@types/expect": "^24.3.0",
+    "@types/mocha": "^8.0.3",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "chai-things": "^0.2.0",
-    "mocha": "^8.0.1"
+    "mocha": "^8.0.1",
+    "ts-mocha": "^7.0.0",
+    "ts-node": "^9.0.0"
   }
 }
