--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node dist/index.js",
+    "start:dev": "nodemon index.ts",
+    "docker:dev": "sudo docker-compose -f docker-compose.yml -f docker-compose.dev.yml up --build",
     "test": "ts-mocha -p ./tsconfig.json **/*.spec.ts",
     "testd": "sudo docker-compose -f docker-compose.yml -f ./test/docker-compose.yml up --build --abort-on-container-exit"
   },
@@ -40,6 +42,7 @@
     "chai-http": "^4.3.0",
     "chai-things": "^0.2.0",
     "mocha": "^8.0.1",
+    "nodemon": "^2.0.4",
     "ts-mocha": "^7.0.0",
     "ts-node": "^9.0.0"
   }
