--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,13 +10,13 @@ jobs:
       - uses: actions/checkout@v2
       - name: create env file
         run: |
-          touch ./back/api/api.env
-          echo PORT=8000 >> ./back/api/api.env
-          echo MONGO_URL=mongodb://mongo:27017/cartons >> ./back/api/api.env
-          echo MONGO_URL_USERS=mongodb://mongo_users:27017/users >> ./back/api/api.env
-          echo REDIS_URL=redis://redis_store >> ./back/api/api.env
-          echo SESSION_SECRET=mon_secret_pas_secret >> ./back/api/api.env
-          echo ALPHA=false >> ./back/api/api.env
-          cat ./back/api/api.env
+          touch ./api/api.env
+          echo PORT=8000 >> ./api/api.env
+          echo MONGO_URL=mongodb://mongo:27017/cartons >> ./api/api.env
+          echo MONGO_URL_USERS=mongodb://mongo_users:27017/users >> ./api/api.env
+          echo REDIS_URL=redis://redis_store >> ./api/api.env
+          echo SESSION_SECRET=mon_secret_pas_secret >> ./api/api.env
+          echo ALPHA=false >> ./api/api.env
+          cat ./api/api.env
       - name: Run the API tests suite in a Docker environment
-        run: docker-compose -f ./back/api/docker-compose.yml -f ./back/api/test/docker-compose.yml up --build --abort-on-container-exit
+        run: docker-compose -f ./api/docker-compose.yml -f ./api/test/docker-compose.yml up --build --abort-on-container-exit
